--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,11 +20,32 @@
         android:hint="@string/enter_position_number"
         android:inputType="textPersonName" />
 
-    <Button
-        android:id="@+id/buttonAddition"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/add_new_colour" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/buttonAddition"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="@string/add_new_colour" />
+
+        <Button
+            android:id="@+id/buttonRemove"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="@string/remove_a_colour" />
+
+        <Button
+            android:id="@+id/buttonUpdate"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="@string/update_a_colour" />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listViewColour"
@@ -37,6 +58,6 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/powered_by_ka_kian" />
+        android:text="@string/powered_by_xi_xin" />
 
 </LinearLayout>
